# rayFighter

./: .clang-format  .gitignore  CMakeLists.txt  Constants.cpp  Constants.h  Doxyfile  Makefile  README.md  gbFighter.code-workspace  main.cpp  main2.cpp  makeBigFuckingFile.sh  preview.mkv
Assets/Graphics/: barrel.aseprite  barrel.json  bg16SpriteCollection.aseprite  bg16SpriteCollection.json  bgAnimation.aseprite  bgAnimation.json  bgGui.aseprite  bgHUD.aseprite  bgHUD.json  bgLowerGui.aseprite  bgLowerGui.json  bgUpperGui.aseprite  bgUpperGui.json  charSelectScreen.aseprite  charSelectScreen.json  deadSkull.aseprite  deadSkull.json  debug32.aseprite  debug32.json  debugFighter.aseprite  debugFighter.json  gbFighter.aseprite  gbFighter.json  gbIntro.aseprite  gbIntro.json  gbSpear.aseprite  gbSpear.json  hitEffect.aseprite  hitEffect.json  nesFighter.aseprite  nesFighter.json  optionSelectScreen.aseprite  optionSelectScreen.json  overlay.aseprite  playerTags.aseprite  playerTags.json  screenEffects.aseprite  screenEffects.json  stage.aseprite  stage.json  (+8 more)
Characters/: BaseCharacter.cpp  BaseCharacter.h  DebugFighter.cpp  DebugFighter.h  Fighter1.cpp  Fighter1.h  Fighter2.cpp  Fighter2.h  Fighter3.cpp  Fighter3.h  Fighter_Andi.cpp  Fighter_Andi.h
Characters/Statemachine/: State.cpp  State.h  StateFactory.h  Statemachine.cpp  Statemachine.h
Game/: BaseState.cpp  BaseState.h  CharSelectState.cpp  CharSelectState.h  Game.cpp  Game.h  GameState.cpp  GameState.h  IntroState.cpp  IntroState.h  MenuState.cpp  MenuState.h  OptionState.cpp  OptionState.h  StageSelectState.cpp  StageSelectState.h
GameObjects/: BaseAsepriteObject.cpp  BaseAsepriteObject.h  BaseGameObject.cpp  BaseGameObject.h  BaseSpriteObject.cpp  BaseSpriteObject.h  CollisionBox2D.cpp  CollisionBox2D.h
GameObjects/CollisionBoxes/: CollisionBox2D.cpp  CollisionBox2D.h
GameObjects/Items/: Barrel.cpp  Barrel.h  Debug32Rectangle.cpp  (+1 more)
Gui/: Gui.cpp  Gui.h  Hud.cpp  Hud.h  Lifebar.cpp  Lifebar.h  Powerbar.cpp  Powerbar.h  Titlescreen.cpp  Titlescreen.h
Systems/: CollisionDetection.cpp  CollisionDetection.h
Utils/: Aseprite.cpp  Aseprite.h  AsepriteManager.cpp  AsepriteManager.h  Camera.cpp  Camera.h  CollisionManager.cpp  CollisionManager.h  Core.h  DebugInfo.cpp  DebugInfo.h  GameManager.cpp  GameManager.h  GameObjectsManager.cpp  GameObjectsManager.h  HelperFunctions.cpp  HelperFunctions.h  InputHandler.cpp  InputHandler.h  Screen2DManager.cpp  Screen2DManager.h  SoundManager.cpp  SoundManager.h
(+34 files in other folders)
